--- a/portfolio/css/style.css
+++ b/portfolio/css/style.css
@@ -17,7 +17,14 @@ img {
   height: auto;
   vertical-align: bottom;
   border-style: none;
+
 }
+
+@keyframes anime_move1 {
+      0% { transform: rotateX(0deg) rotate(0deg); }
+      100% { transform: rotateX(0deg) rotate(360deg); }
+  }
+  
 
 ul,
 li {
@@ -211,14 +218,14 @@ li {
   display: inline-block;
   max-width: 180px;
   text-align: center;
-  background-color: #293b6a;
+  background-color: rgb(211, 143, 250);
   font-size: 16px;
   color: #FFF;
   text-decoration: none;
   font-weight: bold;
   padding: 8px 16px;
-  border: 1px dashed #FFF;
-  box-shadow: 0px 0px 0px 2px #293b6a;/* box-shadowで外枠を */
+  border: 3px dashed #FFF;
+  box-shadow: 0px 0px 0px 2px rgb(211, 143, 250);/* box-shadowで外枠を */
 }
 
 .btn-denim:hover {
@@ -230,13 +237,13 @@ li {
   max-width: 180px;
   height:50px;
   text-align: center;
-  background-color: #9ec34b;
+  background-color: rgba(255, 149, 149, 1);
   font-size: 16px;
   line-height: 52px;
   color: #FFF;
   text-decoration: none;
   font-weight: bold;
-  border: 2px solid #9ec34b;
+  border: 2px solid rgba(255, 149, 149, 1);
   position: relative;
   overflow: hidden;
   z-index: 1;
@@ -255,7 +262,7 @@ li {
   z-index: -1;
 }
 .btn-open:hover{
-  color: #9ec34b;
+  color: rgba(255, 149, 149, 1);
 }
 .btn-open:hover:after{
   height: 240%;
@@ -271,12 +278,12 @@ li {
   max-width: 180px;
   text-align: center;
   font-size: 16px;
-  color: #9ec34b;
+  color: rgb(211, 143, 250);
   text-decoration: none;
   font-weight: bold;
   padding: 8px 16px;
   position: relative;
-  border: 2px solid #9ec34b;
+  border: 2px solid rgb(211, 143, 250);
   transition: .4s;
 }
 
@@ -325,7 +332,7 @@ li {
   font-weight: bold;
   padding: 12px 24px;
   border-radius: 4px;
-  background-image: linear-gradient(-90deg, #89eb75, #f1e753);
+  background-image: linear-gradient(-90deg, rgba(255, 149, 149, 1), rgb(211, 143, 250));
   transition: .5s;
   background-size: 200%;
 }
@@ -340,15 +347,15 @@ li {
 .skill-list {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: flex-start;
   margin-bottom: -50px;
 }
 
 .skill-item {
   display: flex;
-  align-items: flex-start;
-  justify-content: space-between;
-  width: 48%;
+  align-items: center;
+  justify-content: center;
+  width: 50%;
   margin-bottom: 50px;
 }
 
@@ -356,14 +363,17 @@ li {
   width: 60px;
   height: auto;
   margin-right: 20px;
+  
+
 }
 
 .skill-body {
-  flex: 1;
+  flex: 0;
 }
 
 .skill-name {
   margin-bottom: 3px;
+  font-size: 20px;
 }
 
 /*--------------------------------
