--- a/challenge2/ch2.css
+++ b/challenge2/ch2.css
@@ -9,11 +9,13 @@
   margin: 0;
 }
 body {
+  background: url(wood.jpg) #504643;
+  text-align: center;
   margin: 0;
   padding: 40px;
 }
 .wrapper {
-  background: #f9f8ee;
+  background: #f3ffae;
   width: 800px;
   max-width: 90%;
   margin: 0 auto;
@@ -25,7 +27,15 @@ header
 ----------------------------*/
 header { margin-bottom: 60px; }
 h1 { margin-bottom: 20px; }
-ul { background: #fff; }
+ul { 
+  background: #fff; 
+  list-style: none;
+  padding-left: 0;
+  display: flex;
+}
+li{
+  flex: 20% 1 1;
+}
 a {
   display: block;
   color: #196f6a;
