--- a/portfolio/css/style.css
+++ b/portfolio/css/style.css
@@ -137,7 +137,7 @@ li {
   transition: .3s;
   -webkit-transform: translateX(-50%);
   transform: translateX(-50%);
-  background-color: #333;
+  background-color: rgb(255, 113, 149);
 }
 
 .header-nav-item a:hover:after {
@@ -289,7 +289,7 @@ li {
 
 .btn-box:hover {
   border: 2px solid transparent;
-  color: #000;
+  color: rgba(255, 149, 149, 1);;
 }
 
 .btn-box:before, .btn-box:after {
@@ -306,14 +306,14 @@ li {
 }
 
 .btn-box:before {
-  border-bottom: 2px solid #000;
-  border-left: 2px solid #000;
+  border-bottom: 2px solid rgba(255, 149, 149, 1);
+  border-left: 2px solid rgba(255, 149, 149, 1);
   transform-origin: 100% 0%;
 }
 
 .btn-box:after {
-  border-top: 2px solid #000;
-  border-right: 2px solid #000;
+  border-top: 2px solid rgba(255, 149, 149, 1);
+  border-right: 2px solid rgba(255, 149, 149, 1);
   transform-origin: 0% 100%;
 }
 
