--- a/portfolio/css/style.css
+++ b/portfolio/css/style.css
@@ -165,6 +165,7 @@ li {
   line-height: 1.2;
   margin-bottom: 5px;
   letter-spacing: .1em;
+  
 }
 .main-visual-subtitle {
   font-size: 20px;
@@ -180,8 +181,15 @@ li {
   margin: 0 auto;
 }
 .main-visual-img {
-  width: 20%;
-  margin-right: 30px;
+  width: 25%;
+  margin-right: 10px;
+  margin-left: 40px;
+  border-radius: 50%;
+}
+.main-visual-logo {
+  width: 30%;
+  margin-top: 5px;
+  margin-left: 100px;
   border-radius: 50%;
 }
 .main-visual-img img {
@@ -189,6 +197,7 @@ li {
 }
 .main-visual-text {
   flex: 1;
+  margin-top: 50px;
 }
 .main-visual-text p:not(:last-child) {
   margin-bottom: 30px;
