--- a/lesson7/css/style.css
+++ b/lesson7/css/style.css
@@ -227,6 +227,7 @@ address {
 .price-table thead{
   color: #fff;
   background-color: #4184e2;
+  
 }
   
   
@@ -243,15 +244,15 @@ address {
   
 
 /* <tbody>内の<th>に対する指定 */
-.price-table body th{
-  text-align: left;
+.price-table tbody th{
   background-color:#fff ;
+  text-align: left;
 }
   
   
 
 /* <tbody>内の<td>に対する指定 */
-.price-table th{
+.price-table td{
   background-color: #fff;
 }
   
@@ -262,36 +263,43 @@ address {
 -------------------------------------------------- */
 /* フォームの3つのブロックに対する指定 */
 .form-group {
+  margin-bottom: 20px;
   
 }
 /* 項目名に対する指定 */
 .form-label {
-  
-  
-  
+  display: block;
+  margin-bottom: 10px;
+  color: #032559;
 }
 /* 送信ボタンを囲む<div>に対する指定 */
 .form-btn {
-  
-  
+  margin: 30px 0;
+  text-align: center;
 }
 /* 入力欄に対する指定 */
-
-  
-  
-  
-
+input[type="text"],
+input[type="email"],
+textarea{
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #999;
+}
 /* 入力欄が:focus（入力状態）のとき */
-
-  
-  
+input[type="text"]:focus,
+input[type="email"]:focus,
+textarea:focus{
+  border-color: #032559;
+  outline: none;
+} 
 
 /* 送信ボタン */
-
+button [type="submit"]{
+  background: none;
+  border:none;
+  cu
+}
   
-  
-  
-
 /* 送信ボタンが:hoverのとき */
 
   
