--- a/lesson7/css/style.css
+++ b/lesson7/css/style.css
@@ -297,11 +297,14 @@ textarea:focus{
 button [type="submit"]{
   background: none;
   border:none;
-  cu
+  cursor: pointer;
 }
+
   
 /* 送信ボタンが:hoverのとき */
-
+button[type="submit"]:hover{
+  opacity: 0.65;
+}
   
 
 /* --------------------------------------------------
@@ -314,18 +317,18 @@ button [type="submit"]{
 @media screen and (min-width: 768px) {
   /* ヘッダー */
   .header {
-    
+    padding: 40px 0 0;    
   }
   /* ロゴ */
   .logo {
-    
-    
-    
-    
+    width:auto;
+    margin: 0 0 20px;
+    padding: 0;    
+    text-align: center;  
   }
   /* ハンバーガーボタン */
   .btn-burger {
-    
+    display: none;
     /* 768px以上では使用しない */
   }
   /* ナビゲーション */
@@ -334,16 +337,16 @@ button [type="submit"]{
   }
   .nav-list {
     /* flexbox（横並びにする要素の親に指定） */
-    
+    display: flex;
     /* フレックスアイテムを主軸方向（横方向）中央揃えで配置 */
-    
+    justify-content: center;
     /* フレックスアイテムを交差軸方向（縦方向）中央揃えで配置 */
-    
+    align-items: center;
     padding: 0;
   }
   .nav-list li {
     /* フレックスアイテムに対する指定 */
-    
+    flex: 0 1 auto;
     padding: 0 20px;
     line-height: 1;
     border-right: 1px solid #fff;
@@ -355,7 +358,7 @@ button [type="submit"]{
   }
   /* 幅768px未満でメニューを開いた状態から、ウィンドウ幅を768px以上に広げたとき、メニューにflexboxを適用して<li>を横並び表示に切り替える */
   .nav-toggle:checked~.nav .nav-list {
-    
+    display: flex;    
   }
   /* セクション */
   .section {
@@ -383,13 +386,14 @@ button [type="submit"]{
   /* 横並び */
   .row {
     /* flexbox（横並びにする要素の親に指定） */
-     
+    display: flex;
+    justify-content: space-between;
     
   }
   /* 横並び要素 */
   .col {
     /* フレックスアイテムに対する指定 */
-    
+    flex: 0 1 32%;;
     margin: 0;
   }
   /* --------------------------------------------------
@@ -397,11 +401,11 @@ button [type="submit"]{
   -------------------------------------------------- */
   /* 入場料（テーブル） */
   .price-table {
-    
+    font-size: 16px;
   }
   /* <th>と<td>に対する指定 */
   .price-table th, .price-table td {
-    
+    padding: 20px;
   }
   /* --------------------------------------------------
   お問い合わせフォーム
@@ -409,23 +413,23 @@ button [type="submit"]{
   /* フォームの3つのブロックに対する指定 */
   .form-group {
     /* flexbox（横並びにする要素の親に指定） */
-    
-    
+    display: flex;
+    max-width: 800px;
     /* 横幅の最大値 */
     margin-bottom: 10px;
   }
   /* 項目名に対する指定 */
   .form-label {
     /* フレックスアイテムに対する指定 */
-    
-    
+    flex: 0 0 12em;
+    max-width: 12em;
     margin: 0;
     padding-top: 5px;
   }
   /* 入力欄を囲む<div>に対する指定 */
   .form-col {
     /* フレックスアイテムに対する指定 */
-    
+    flex: 0 1 100%;
   }
 }
 /* --------------------------------------------------
