--- a/portfolio/css/style.css
+++ b/portfolio/css/style.css
@@ -356,15 +356,17 @@ li {
 .skill-list {
   display: flex;
   flex-wrap: wrap;
-  justify-content: flex-start;
+  justify-content: space-between;
   margin-bottom: -50px;
+  padding: 0 100px 0 100px;
 }
 
 .skill-item {
   display: flex;
   justify-content: center;
-  width: 50%;
+  width: 30%;
   margin-bottom: 50px;
+  margin-top: 10px;
 }
 
 .skill-img {
@@ -380,6 +382,7 @@ li {
 }
 
 .skill-name {
+  margin-top: 5px;
   margin-bottom: 3px;
   font-size: 20px;
 }
@@ -636,4 +639,9 @@ li {
   .article {
     padding: 50px 0;
   }
+}
+figure iframe{
+  width: 100%;
+  padding-left: 50px;
+  padding-right: 50px;
 }
