--- a/portfolio/css/style.css
+++ b/portfolio/css/style.css
@@ -185,13 +185,16 @@ li {
   margin-right: 10px;
   margin-left: 40px;
   border-radius: 50%;
+  animation: loading 16s linear 1s infinite;
 }
 .main-visual-logo {
   width: 35%;
   margin-top: 5px;
   margin-left: 350px;
   border-radius: 40%;
+  
 }
+
 .main-visual-img img {
   border-radius: 50%;
 }
@@ -202,12 +205,17 @@ li {
 .main-visual-text p:not(:last-child) {
   margin-bottom: 30px;
 }
-
+@keyframes loading {
+  0%{transform: rotate(0deg);}
+  50%{transform: rotate(180deg);}
+  100%{transform: rotate(360deg);}               
+} 
 /*--------------------------------
  Works
 ---------------------------------*/
 .works-list {
   display: flex;
+  justify-content: center;
   flex-wrap: wrap;
   margin-bottom: -40px;
 }
@@ -373,8 +381,11 @@ li {
   width: 60px;
   height: auto;
   margin-right: 20px;
-  
+  transition: transform 0.2s ease-in-out 0s; 
 
+}
+.skill-img:hover{
+  transform: scale(1.5);
 }
 
 .skill-body {
